# STSAFE-A110-AWS-ESP32-test

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old  wildcardpolicy
components/esp-tls/: CMakeLists.txt  Kconfig  esp_tls_mbedtls.c
components/stsafe-a110/: CMakeLists.txt  Kconfig
components/stsafe-a110/mw_V3.3.5/: STSAFE-A1xx_Middleware.chm
components/stsafe-a110/mw_V3.3.5/CoreModules/Inc/: stsafea110.h  stsafea_core.h  stsafea_types.h
components/stsafe-a110/mw_V3.3.5/CoreModules/Src/: stsafea_core.c  stsafea_service.c
components/stsafe-a110/mw_V3.3.5/Interface/: stsafea_conf_template.h  stsafea_crypto_interface_template.c  stsafea_crypto_mbedtls_interface_template.c  stsafea_crypto_stlib_interface_template.c
components/stsafe-a110/port/: stsafe_ops.c  stsafe_ops.h  stsafea_conf.h  stsafea_crypto.c  stsafea_crypto_interface.c  stsafea_interface_conf.h  stsafea_service.c  stsafea_service.h  stsafea_service_interface.c
src/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_demo_mutual_auth.c
